Tried to fix autoscroll on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -127,7 +127,7 @@ h1 {
 }
 
 .section3{
-  width:2vh;
+  width:5px;
   overflow-y: scroll;
    scroll-snap-align: start;
    position: relative;
